# graph-ui-convertor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  SECURITY.md  example_json.txt  makefile  pyproject.toml
.github/: branch-protection-checklist.md  pull_request_template.md
.github/workflows/: ci.yml
adapters/excalidraw/: repository.py  url_encoder.py
adapters/filesystem/: catalog_index_repository.py  json_utils.py  markup_catalog_source.py  markup_repository.py  markup_utils.py  scene_repository.py
adapters/layout/: grid.py  procedure_graph.py
adapters/s3/: __init__.py  markup_catalog_source.py  markup_repository.py  s3_client.py
adapters/unidraw/: __init__.py  repository.py
app/: catalog_wiring.py  cli.py  config.py  web_i18n.py  web_main.py
app/web/: ui_text.py
config/catalog/: app.docker.s3.yaml  app.docker.yaml  app.k8s.yaml  app.s3.yaml  app.yaml  env.local
data/catalog/: index.json
data/excalidraw_in/: advanced.excalidraw  basic.excalidraw
docker/: compose.demo.yaml
docker/catalog/: Dockerfile
docs/: CONFIG.md  FORMAT.md  K8S.md
docs/c4/: k8s.mmd
docs/en/: CONFIG.md  FORMAT.md  K8S.md  README.md
docs/ru/: CONFIG.md  FORMAT.md  K8S.md  README.md
domain/: catalog.py  markup_type_labels.py  models.py
domain/ports/: catalog.py  layout.py  repositories.py
domain/services/: block_graph_resolution.py  build_catalog_index.py  build_cross_team_graph_dashboard.py  build_team_procedure_graph.py  catalog_health.py  convert_excalidraw_to_markup.py  convert_markup_base.py  convert_markup_to_excalidraw.py  convert_markup_to_unidraw.py  convert_procedure_graph_base.py  convert_procedure_graph_to_excalidraw.py  excalidraw_links.py  (+6 more)
k8s/: catalog-deployment.yaml  excalidraw-deployment.yaml  pvc.yaml
scripts/: prepare_demo_data.py  seed_s3.py  smoke_demo.py
tests/: conftest.py  s3_utils.py  test_block_layout_sorting.py  test_catalog_api.py  test_catalog_cache_invalidation.py  test_catalog_e2e.py  test_catalog_index.py  test_catalog_open.py  test_catalog_proxy.py  test_catalog_unidraw.py  test_cycles.py  test_end_types.py  test_excalidraw_title.py  test_excalidraw_to_markup.py  test_excalidraw_url.py  test_procedure_graph.py  test_roundtrip.py  test_s3_integration.py  test_s3_markup_source.py
(+79 files in other folders)
