[tool.poetry]
name = "cjm-ui-convertor"
version = "0.1.0"
description = "Round-trip converter between CJM markup graphs and Excalidraw."
authors = ["Codex Agent <agent@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "app" },
  { include = "domain" },
  { include = "adapters" },
]

[tool.virtualenvs]
create = false
in-project = true

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pydantic = "^2.9.0"
typer = "^0.12.5"
rich = "^13.7.1"
orjson = "^3.10.7"
networkx = "^3.3"
click = ">=8.1.3,<8.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
jinja2 = "^3.1.4"
python-multipart = "^0.0.9"
filelock = "^3.15.4"
pyyaml = "^6.0.2"
lzstring = "^1.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
ruff = "^0.6.7"
pre-commit = "^3.8.0"
types-orjson = "^3.6.2"
httpx = "^0.27.2"

[tool.poetry.scripts]
cjm = "app.cli:app"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "domain", "adapters", "tests"]

[tool.ruff.lint]
extend-select = ["B", "C4", "I", "UP", "RUF", "W"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
no_implicit_reexport = true
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
  "ignore:'asyncio.iscoroutinefunction' is deprecated.*:DeprecationWarning:fastapi\\.routing",
]
